Fixed issue Previous button issue on initial page Fixed issue where previous button was clicked on the initial page, the page would not load any pokemon, it would be stuck loading... Changed Previous and Next buttons font to look more appealing

--- a/src/index.css
+++ b/src/index.css
@@ -187,7 +187,6 @@ h1{
   border-radius: 5px;
   margin-bottom: 60px;
   margin-top: 20px;
-
 }
 
 .prev-btn{
@@ -200,6 +199,7 @@ h1{
   border: 2px solid grey;
   background-color: #ffeaea;
   font-size: .9rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .prev-btn:hover{
@@ -218,6 +218,7 @@ h1{
   border: 2px solid grey;
   background-color: #ebffea;
   font-size: .9rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .next-btn:hover{
